--- a/st-0x16-Meios_Metodos_criacao_Artigos_Markdown/css/dataprev.css
+++ b/st-0x16-Meios_Metodos_criacao_Artigos_Markdown/css/dataprev.css
@@ -18,9 +18,15 @@ body {
     background-color: white
   }
 
+.level2 h1 {
+    font-size: 200%; 
+    text-decoration: underline; 
+    text-align: left;
+  }
+
 .reveal {
   font-family: "Lato", sans-serif;
-  font-size: 36px;
+  font-size: 20px;
   font-weight: normal;
   letter-spacing: -0.02em;
   color: black; }
