--- a/st-0x16-Meios_Metodos_criacao_Artigos_Markdown/css/dataprev.css
+++ b/st-0x16-Meios_Metodos_criacao_Artigos_Markdown/css/dataprev.css
@@ -24,6 +24,10 @@ body {
     text-align: left;
   }
 
+#referências, .references {
+    text-align: left;
+  }
+
 .reveal {
   font-family: "Lato", sans-serif;
   font-size: 20px;
