Atualiza template "about"
- mostra versão da aplicação e também do pandoc/pandoc-citeproc

--- a/webhook/templates/about.html
+++ b/webhook/templates/about.html
@@ -6,11 +6,14 @@
 </head>
 <body>
 
-<h1>Web Hook</h1>
+<h1>Sobre o Web Hook!</h1>
 
-<h2>Sobre o Web Hook!</h2>
-
-
-
+<p><strong><i>Web Hook</i></strong> para realizar conversão automatizada de documentos/artigos para PDF.</p>
+<hr>
+<br />Versão do <i>Web Hook</i>: <strong>{{webhook_version}}</strong>
+<hr>
+<br />Pandoc version: <pre>{{pandoc_version}}</pre>
+<br />Pandoc-citeproc version: <pre>{{ pandocciteproc_version }}</pre>
+<hr>
 </body>
 </html>
